--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <h3>Verify Your Account</h3>
+      <br />
+      <p>
+        We emailed you the six digit code to cool_guy@email.com<br />
+        Enter the code below to confirm your email adress.
+      </p>
+      <div class="row">
+        <div class="col-sm-2">
+          <input type="text" placeholder="0" maxlength="1" />
+        </div>
+        <div class="col-sm-2">
+          <input type="text" placeholder="0" maxlength="1" />
+        </div>
+        <div class="col-sm-2">
+          <input type="text" placeholder="0" maxlength="1" />
+        </div>
+        <div class="col-sm-2">
+          <input type="text" placeholder="0" maxlength="1" />
+        </div>
+        <div class="col-sm-2">
+          <input type="text" placeholder="0" maxlength="1" />
+        </div>
+        <div class="col-sm-2">
+          <input type="text" placeholder="0" maxlength="1" />
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
