--- a/index.html
+++ b/index.html
@@ -21,27 +21,14 @@
         We emailed you the six digit code to cool_guy@email.com<br />
         Enter the code below to confirm your email adress.
       </p>
-      <div class="row">
-        <div class="col-sm-2">
-          <input type="text" placeholder="0" maxlength="1" />
-        </div>
-        <div class="col-sm-2">
-          <input type="text" placeholder="0" maxlength="1" />
-        </div>
-        <div class="col-sm-2">
-          <input type="text" placeholder="0" maxlength="1" />
-        </div>
-        <div class="col-sm-2">
-          <input type="text" placeholder="0" maxlength="1" />
-        </div>
-        <div class="col-sm-2">
-          <input type="text" placeholder="0" maxlength="1" />
-        </div>
-        <div class="col-sm-2">
-          <input type="text" placeholder="0" maxlength="1" />
-        </div>
+      <div class="inputRow">
+        <input type="text" placeholder="0" maxlength="1" />
+        <input type="text" placeholder="0" maxlength="1" />
+        <input type="text" placeholder="0" maxlength="1" />
+        <input type="text" placeholder="0" maxlength="1" />
+        <input type="text" placeholder="0" maxlength="1" />
+        <input type="text" placeholder="0" maxlength="1" />
       </div>
     </div>
-    
   </body>
 </html>
